syntax = "proto3";

package telemetry.v1;

import "iot/v1/iot.proto";

message TelemetryReportIOTDeviceRequest {
  string name = 1;
  iot.v1.DeviceDiscovery device_discovery = 2;
}

message TelemetryReportIOTDeviceResponse {}

service TelemetryService {
  rpc TelemetryReportIOTDevice(stream TelemetryReportIOTDeviceRequest)
      returns (TelemetryReportIOTDeviceResponse);
}
